update cv both lan

--- a/pt/CV-pt.tex
+++ b/pt/CV-pt.tex
@@ -121,7 +121,7 @@
 	
 	\section{Carta de Apresentação}
 	
-	Sou um Cientista de Dados com forte experiência em machine learning, otimização e MLOps, focado no desenvolvimento de soluções escaláveis de IA e na implantação de modelos em produção. Sou formado em Engenharia Eletrônica e mestre em Sistemas de Informação, com experiência acadêmica internacional no Japão, Reino Unido e Canadá. Essa trajetória diversificada me proporcionou habilidades analíticas avançadas, permitindo compreender e implementar rapidamente pesquisas de ponta, aplicando métodos científicos para resolver desafios complexos da indústria.
+	Sou um Cientista de Dados com forte experiência em machine learning, otimização e MLOps, focado no desenvolvimento de soluções escaláveis de IA e na implantação de modelos em produção. Sou formado em Engenharia Eletrônica e mestre em Sistemas de Informação, com experiência acadêmica internacional no Japão, Reino Unido e Canadá. Essa trajetória diversificada me proporcionou habilidades analíticas avançadas, permitindo compreender e implementar rapidamente pesquisas de ponta, aplicando métodos científicos para solucionar desafios complexos da indústria.
 	
 	Na minha experiência profissional, trabalhei extensivamente com frameworks de machine learning e deep learning para treinar e ajustar modelos voltados para modelagem preditiva, detecção de anomalias e visão computacional. Minha expertise em MLOps me permite projetar e implementar pipelines completos, garantindo reprodutibilidade e escalabilidade. Utilizando ferramentas como MLflow, Docker e plataformas em nuvem como AWS e DigitalOcean, implantei modelos de machine learning com sucesso e os integrei a sistemas de produção via APIs.
 	
@@ -140,7 +140,7 @@
 	\resumeItem{MLOps Completo}
 	{Desenvolvimento de um pipeline escalável e automatizado de MLOps utilizando MLflow, Docker e AWS, garantindo reprodutibilidade no treinamento, implantação e monitoramento contínuo de modelos em produção.}
 	\resumeItem{Implantação de IA \& Integração com Nuvem}
-	{Integração de modelos de ML em produção via APIs, otimizando inferência de modelos para detecção de anomalias em tempo real e análise preditiva.}
+	{Implantação de modelos de ML em produção via APIs, otimizando a inferência em tempo real para detecção de anomalias e análise preditiva.}
 	\resumeItemListEnd
 	
 	\resumeSubheading
@@ -152,7 +152,7 @@
 	\resumeItem{APIs de Visão Computacional}
 	{Criação e implantação de APIs para aplicações de visão computacional, incluindo uma API de anonimização que remove pessoas de vídeos.}
 	\resumeItem{Desenvolvimento de IoT}
-	{Liderança no desenvolvimento de um produto IoT, incluindo a implementação do protocolo MQTT e armazenamento de séries temporais usando InfluxDB.}
+	{Liderança no desenvolvimento de um produto IoT, incluindo a implementação do protocolo MQTT e o armazenamento de dados temporais no InfluxDB.}
 	\resumeItemListEnd
 	
 	\resumeSubheading
