--- a/en/CV-en.tex
+++ b/en/CV-en.tex
@@ -126,7 +126,7 @@ I am a Data Scientist with a strong background in machine learning, optimization
 
 In my industry experience, I have worked extensively with machine learning and deep learning frameworks to train and fine-tune models for predictive modeling, anomaly detection, and computer vision. My expertise in MLOps enables me to design and implement end-to-end pipelines that ensure reproducibility and scalability. Leveraging tools like MLflow, Docker, and cloud platforms such as AWS and DigitalOcean, I have successfully deployed machine learning models and integrated them into production via API services.
 
-With a strong foundation in statistical analysis and optimization, I am particularly interested in Generative AI and LLMs, actively exploring their potential in real-world applications. I am eager to contribute to cutting-edge AI solutions and look forward to collaborating with professionals and organizations driving AI innovation in production environments.
+I have a strong foundation in statistical analysis and optimization. My main interest lies in Generative AI and LLMs, and I actively explore their real-world applications. I am eager to contribute to cutting-edge AI solutions and look forward to collaborating with professionals and organizations driving AI innovation in production environments.
 
 
 
@@ -143,7 +143,7 @@ With a strong foundation in statistical analysis and optimization, I am particul
 \resumeItem{End-to-End MLOps}
 {Developed a scalable and automated MLOps pipeline using MLflow, Docker, and AWS, ensuring reproducible model training, deployment, and continuous monitoring in production environments.}
 \resumeItem{AI Deployment \& Cloud Integration}
-{Integrated ML models into production via API services, optimizing model inference for real-time anomaly detection and predictive analytics.}
+{Deployed ML models via API services, optimizing real-time inference for anomaly detection and predictive analytics.}
 \resumeItemListEnd
 
 
@@ -156,7 +156,7 @@ With a strong foundation in statistical analysis and optimization, I am particul
 \resumeItem{Computer Vision APIs}
 {Built and deployed APIs for computer vision applications, including an anonymization API that removes people from videos.}
 \resumeItem{IoT Development}
-{Led the development of an IoT product, implementing MQTT communication and used InfluxDB for time series data storage.}
+{Led IoT product development, implementing MQTT communication and utilizing InfluxDB for time series data storage.}
 \resumeItemListEnd
 
 \resumeSubheading
