update both lan

--- a/pt/CV-pt.tex
+++ b/pt/CV-pt.tex
@@ -125,7 +125,7 @@
 	
 	Na minha experiência profissional, trabalhei extensivamente com frameworks de machine learning e deep learning para treinar e ajustar modelos voltados para modelagem preditiva, detecção de anomalias e visão computacional. Minha expertise em MLOps me permite projetar e implementar pipelines completos, garantindo reprodutibilidade e escalabilidade. Utilizando ferramentas como MLflow, Docker e plataformas em nuvem como AWS e DigitalOcean, implantei modelos de machine learning com sucesso e os integrei a sistemas de produção via APIs.
 	
-	Com uma base sólida em análise estatística e otimização, tenho um interesse especial em IA Generativa e LLMs, explorando ativamente seu potencial em aplicações reais. Estou motivado a contribuir para soluções inovadoras de IA e ansioso para colaborar com profissionais e organizações que impulsionam a inovação em ambientes de produção.
+	Com uma base sólida em análise estatística e otimização, tenho um interesse especial em IA Generativa e LLMs, explorando ativamente seu potencial em aplicações reais. Estou motivado a contribuir para soluções inovadoras de IA e pronto para colaborar com profissionais e organizações que impulsionam a inovação.
 	
 	%-----------EXPERIÊNCIA PROFISSIONAL-----------------
 	\section{Experiência Profissional}
