--- a/en/CV-en.tex
+++ b/en/CV-en.tex
@@ -126,7 +126,7 @@ I am a Data Scientist with a strong background in machine learning, optimization
 
 In my industry experience, I have worked extensively with machine learning and deep learning frameworks to train and fine-tune models for predictive modeling, anomaly detection, and computer vision. My expertise in MLOps enables me to design and implement end-to-end pipelines that ensure reproducibility and scalability. Leveraging tools like MLflow, Docker, and cloud platforms such as AWS and DigitalOcean, I have successfully deployed machine learning models and integrated them into production via API services.
 
-I have a strong foundation in statistical analysis and optimization. My main interest lies in Generative AI and LLMs, and I actively explore their real-world applications. I am eager to contribute to cutting-edge AI solutions and look forward to collaborating with professionals and organizations driving AI innovation in production environments.
+I have a strong foundation in statistical analysis and optimization. My main interest lies in Generative AI and LLMs, and I actively explore their real-world applications. I am eager to contribute to cutting-edge AI solutions and look forward to collaborating with professionals and organizations driving AI innovation.
 
 
 
