Update English CV

--- a/en/CV-en.tex
+++ b/en/CV-en.tex
@@ -113,7 +113,7 @@
 	\\
 	& Phone: +55 48 99976-2173 \\
 	& Email: \href{mailto:yurimarca@gmail.com}{yurimarca@gmail.com} \\
-	& GitHub: \href{https://github.com/yurimarca}{https://github.com/yurimarca}\\
+	& Website: \href{https://yurimarca.github.io}{https://yurimarca.github.io} \\
 	& LinkedIn: \href{https://www.linkedin.com/in/yurimarca/}{https://www.linkedin.com/in/yurimarca/}
 	
 \end{tabular*}
@@ -161,7 +161,7 @@ I have a strong foundation in statistical analysis and optimization. My main int
 
 \resumeSubheading
 {University of Warwick, Warwick Business School}{Coventry, United Kingdom}
-{Ph.D. Research}{Oct. 2019 -- Apr. 2022}
+{Research}{Oct. 2019 -- Apr. 2022}
 \resumeItemListStart
 \resumeItem{Field of Research}
 {Ranking \& Selection; Bayesian Optimization; Reinforcement Learning.}
