--- a/en/CV-en.tex
+++ b/en/CV-en.tex
@@ -109,11 +109,11 @@
 	%\onehalfspacing
 %----------HEADING-----------------
 	\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-	\textbf{\LARGE Yuri Pereira Marca} & Jaraguá do Sul - SC, Brazil
+	\textbf{\LARGE Yuri Pereira Marca} & Florianopolis, Brazil
 	\\
 	& Phone: +55 48 99976-2173 \\
 	& Email: \href{mailto:yurimarca@gmail.com}{yurimarca@gmail.com} \\
-	& Website: \href{https://yurimarca.github.io}{https://yurimarca.github.io} \\
+	%& Website: \href{https://yurimarca.github.io}{https://yurimarca.github.io} \\
 	& LinkedIn: \href{https://www.linkedin.com/in/yurimarca/}{https://www.linkedin.com/in/yurimarca/}
 	
 \end{tabular*}
@@ -122,12 +122,11 @@
 \section{Presentation Letter}
 
 
-I am a Data Scientist with a strong background in machine learning, optimization, and MLOps, focused on developing scalable AI solutions and deploying models into production. I hold a Bachelor’s in Electronic Engineering and a Master’s in Information Systems, with international academic experience across Japan, the United Kingdom, and Canada. This diverse background has equipped me with strong analytical skills, the ability to quickly understand and implement state-of-the-art research, and a scientific approach to solving complex industry challenges.
+I am a Data Scientist and AI/ML Engineer with a strong background in electronic engineering, optimization and MLOps. I focus on developing scalable AI solutions and deploying them into production. Currently, I am leading the development and deployment of AI voice agents for a real estate operation, enabling automated phone interactions by integrating tools for real-time information retrieval, messaging and email communication. I hold a Bachelor’s in Electronic Engineering and a Master’s in Information Systems, with international academic experience across Japan, the United Kingdom, and Canada. This diverse background has equipped me with strong analytical skills, the ability to quickly understand and implement state-of-the-art research, and a scientific approach to solving complex industry challenges.
 
-In my industry experience, I have worked extensively with machine learning and deep learning frameworks to train and fine-tune models for predictive modeling, anomaly detection, and computer vision. My expertise in MLOps enables me to design and implement end-to-end pipelines that ensure reproducibility and scalability. Leveraging tools like MLflow, Docker, and cloud platforms such as AWS and DigitalOcean, I have successfully deployed machine learning models and integrated them into production via API services.
+In my industry experience, I have worked extensively with machine learning and deep learning frameworks to train and fine-tune models for predictive modeling, anomaly detection, and computer vision. In MLOps, I build end-to-end pipelines that ensure reproducibility and scalability. Leveraging tools like MLflow, Docker, Kubernetes, and cloud platforms such as AWS, I have successfully deployed machine learning models and integrated them into production via API services. My experience also spans IoT systems, from firmware development to model deployment on edge devices.
 
-I have a strong foundation in statistical analysis and optimization. My main interest lies in Generative AI and LLMs, and I actively explore their real-world applications. I am eager to contribute to cutting-edge AI solutions and look forward to collaborating with professionals and organizations driving AI innovation.
-
+I am eager to contribute to impactful, production-grade AI solutions and collaborate with teams building the future of intelligent systems at scale.
 
 
 %-----------PROFESSIONAL-EXPERIENCE-----------------
@@ -135,8 +134,17 @@ I have a strong foundation in statistical analysis and optimization. My main int
 \resumeSubHeadingListStart
 
 \resumeSubheading
+{Dry Ground AI}{Texas, United States of America}
+{AI Engineer}{Mar. 2025 -- Present}
+\resumeItemListStart
+\resumeItem{AI Voice Agent Development}{Developed and deployed AI voice agents to answer real estate-related calls; integrated tools to retrieve up-to-date information, send messages and emails, and automate client interactions.}
+\resumeItem{Client Profiling \& Lead Generation}{Developed a data science workflow for classifying user profiles and identifying potential clients, supporting strategic sales initiatives.}
+\resumeItemListEnd
+
+
+\resumeSubheading
 {WEG}{Jaragua do Sul, Brazil}
-{Data Scientist}{Jun. 2024 -- Present}
+{Data Scientist}{Jun. 2024 -- Mar. 2025}
 \resumeItemListStart
 \resumeItem{Predictive Maintenance \& Anomaly Detection}
 {Designed and deployed machine learning and deep learning models for predictive maintenance and condition monitoring of wind turbines.}
@@ -151,8 +159,8 @@ I have a strong foundation in statistical analysis and optimization. My main int
 {Macnica DHW}{Florianópolis, Brazil}
 {Data Scientist}{Nov. 2022 -- Oct. 2023}
 \resumeItemListStart
-\resumeItem{Supervised Learning}
-{Developed machine learning models for data classification to support the development of an intelligent sensor.}
+\resumeItem{Smart Sensors}
+{Developed machine learning models for data classification to support the development of an intelligent IoT sensor.}
 \resumeItem{Computer Vision APIs}
 {Built and deployed APIs for computer vision applications, including an anonymization API that removes people from videos.}
 \resumeItem{IoT Development}
@@ -224,10 +232,11 @@ I have a strong foundation in statistical analysis and optimization. My main int
 
 \begin{tabular}{l @{\quad} l}
 	\textbf{Programming Languages:}& Python, C, C++, Bash (Unix Shell).\\
-	\textbf{Machine Learning Frameworks:} & PyTorch, scikit-learn, XGBoost, FastAI.\\
-	\textbf{MLOps \& Deployment Tools:}& Docker, MLflow, Hydra, Git, CI/CD (GitLab, GitHub Actions), FastAPI.\\
-	\textbf{Data Engineering \& Pipelines:}& Dask, PostgreSQL, Redshift, InfluxDB, SQL.\\
-	\textbf{Cloud Platforms:}& AWS (SageMaker, ECR, S3, EC2), DigitalOcean.\\
+	\textbf{AI \& Machine Learning Frameworks:} & PyTorch, scikit-learn, XGBoost, LangChain.\\
+	\textbf{MLOps \& Deployment Tools:}& Docker, Kubernetes, MLflow, Git, CI/CD, FastAPI, Grafana.\\
+	\textbf{Embedded Systems:}& ARM Cortex-M, Jetson Nano, Arduino, FreeRTOS, MQTT.\\
+	\textbf{Data Engineering \& Pipelines:}& PostgreSQL, Redshift, InfluxDB.\\
+	\textbf{Cloud Platforms:}& AWS (SageMaker, ECR, S3, EC2, Lambda Functions).\\
 	\textbf{Optimization:}& Bayesian Optimization, Multi-objective Evolutionary Algorithms. \\
 	\textbf{Operating Systems:}& Linux (Fedora, Ubuntu), Windows.\\
 \end{tabular}
