--- a/en/CV-en.tex
+++ b/en/CV-en.tex
@@ -122,9 +122,9 @@
 \section{Presentation Letter}
 
 
-I am a Data Scientist and AI/ML Engineer with a strong background in electronic engineering, optimization and MLOps. I focus on developing scalable AI solutions and deploying them into production. Currently, I am leading the development and deployment of AI voice agents for a real estate operation, enabling automated phone interactions by integrating tools for real-time information retrieval, messaging and email communication. I hold a Bachelor’s in Electronic Engineering and a Master’s in Information Systems, with international academic experience across Japan, the United Kingdom, and Canada. This diverse background has equipped me with strong analytical skills, the ability to quickly understand and implement state-of-the-art research, and a scientific approach to solving complex industry challenges.
+I am a Data Scientist and AI/ML Engineer with a strong background in electronic engineering, optimization, and MLOps. I focus on developing scalable AI solutions and deploying them into production. Currently, I am leading the development and deployment of AI voice agents for a real estate operation, enabling automated phone interactions by integrating tools for real-time information retrieval, messaging, and email communication. I hold a Bachelor’s in Electronic Engineering and a Master’s in Information Systems, with international academic experience across Japan, the United Kingdom, and Canada. This diverse background has equipped me with strong analytical skills, the ability to quickly understand and implement state-of-the-art research, and a scientific approach to solving complex industry challenges.
 
-In my industry experience, I have worked extensively with machine learning and deep learning frameworks to train and fine-tune models for predictive modeling, anomaly detection, and computer vision. In MLOps, I build end-to-end pipelines that ensure reproducibility and scalability. Leveraging tools like MLflow, Docker, Kubernetes, and cloud platforms such as AWS, I have successfully deployed machine learning models and integrated them into production via API services. My experience also spans IoT systems, from firmware development to model deployment on edge devices.
+In my industry experience, I have worked extensively with machine learning and deep learning frameworks to train and fine-tune models for predictive modeling, anomaly detection, and computer vision. In MLOps, I build end-to-end pipelines that ensure reproducibility and scalability. Leveraging tools like MLflow, Docker, Kubernetes, and the cloud platform AWS, I have successfully deployed machine learning models and integrated them into production via API services. My experience also spans IoT systems, from firmware development to model deployment on edge devices.
 
 I am eager to contribute to impactful, production-grade AI solutions and collaborate with teams building the future of intelligent systems at scale.
 
